package com.job.designpattern.interpreter;

import lombok.Data;

@Data
public class PlayContext {

    private String text;
}
